--- a/client/components/bindPolymer.html
+++ b/client/components/bindPolymer.html
@@ -4,7 +4,7 @@
     <title>Bi-Directional Binding Demo</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.6.1/webcomponents-lite.min.js"></script>
-    <link rel='import' href='./components/name-card-2/name-card.html' />
+    <link rel='import' href='name-card-2/name-card.html' />
   </head>
   <body>
     <div class="container">
@@ -14,10 +14,7 @@
           <label for="f_name">First Name:</label>
           <input type="text" ng-model="f_name">
         </p>
-        <p>
-          <label for="l_name">Last Name:</label>
-          <input type="text" ng-model="l_name">
-        </p>
+        
         <name-card id="test" first="{{f_name}}" last="{{l_name}}" bind-polymer></name-card>
       </div>
     </div>
