--- a/client/components/bindPolymer.html
+++ b/client/components/bindPolymer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='app'>
+<html ng-app='hrr10MjbeApp'>
   <head>
     <title>Bi-Directional Binding Demo</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -21,8 +21,8 @@
     <script>
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script>
-    angular
+    <script src="../app/directives/bindPolymer/bindPolymer.directive.js">
+    /*angular
     .module('app', [])
     .directive('bindPolymer', ['$parse', function($parse) {
       return {
@@ -51,7 +51,7 @@
           };
         }
       };
-    }]);
+    }]);*/
     </script>
   </body>
 </html>
