data binding in routing working

--- a/client/components/bindPolymer.html
+++ b/client/components/bindPolymer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html ng-app='hrr10MjbeApp'>
   <head>
     <title>Bi-Directional Binding Demo</title>
@@ -25,4 +25,4 @@
    
     </script>
   </body>
-</html>
+</html>-->
