--- a/client/app/app.css
+++ b/client/app/app.css
@@ -32,3 +32,14 @@
     max-width: 730px;
   }
 }
+.name-container p {
+  font-size: 11px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 2px 0 2px 15px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  background-color: #333;
+  color: white;
+  display: block;
+}
